# xcbuild

Libraries/: CMakeLists.txt
Libraries/pbxbuild/Sources/Tool/: HeadermapResolver.cpp
Libraries/pbxproj/: CMakeLists.txt
Libraries/pbxproj/Headers/pbxproj/: Proj.h  pbxproj.h
Libraries/pbxproj/Headers/pbxproj/PBX/: AggregateTarget.h  (+23 more)
Libraries/pbxproj/PrivateHeaders/pbxproj/: Context.h  PbxWriter.h  PlistHelpers.h
Libraries/pbxproj/Sources/: Context.cpp  PbxWriter.cpp  PlistHelpers.cpp  Proj.cpp
Libraries/pbxproj/Sources/PBX/: AggregateTarget.cpp  AppleScriptBuildPhase.cpp  BaseGroup.cpp  BuildFile.cpp  BuildPhase.cpp  BuildRule.cpp  ContainerItemProxy.cpp  CopyFilesBuildPhase.cpp  FileReference.cpp  FrameworksBuildPhase.cpp  Group.cpp  GroupItem.cpp  HeadersBuildPhase.cpp  LegacyTarget.cpp  NativeTarget.cpp  Object.cpp  Project.cpp  ReferenceProxy.cpp  ResourcesBuildPhase.cpp  RezBuildPhase.cpp  ShellScriptBuildPhase.cpp  SourcesBuildPhase.cpp  Target.cpp  TargetDependency.cpp
Libraries/pbxproj/Sources/XC/: BuildConfiguration.cpp  ConfigurationList.cpp  VersionGroup.cpp
Libraries/pbxsetting/Headers/pbxsetting/: Type.h  Value.h
Libraries/pbxsetting/Sources/: Type.cpp  Value.cpp
Libraries/plist/Headers/plist/: Dictionary.h  String.h
Libraries/plist/Sources/: String.cpp
Libraries/repack/: CMakeLists.txt
Libraries/repack/Headers/repack/: Driver.h
Libraries/repack/Headers/repack/rename/: Driver.h  Options.h
Libraries/repack/Sources/: Driver.cpp
Libraries/repack/Sources/rename/: Driver.cpp  Options.cpp
Libraries/repack/Tools/: RenameProject.cpp
(+3 files in other folders)
